<resources>
    <string name="app_name">AudioPlayer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="permissions_request">You need to grant some permissions</string>
    <string name="see_permissions">See permissions</string>

    <string name="musics">Musics</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>

    <!-- Notification -->
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="cover">Cover</string>
    <!-- Notification END -->

    <!-- ArtistsFragment -->
    <string name="artist.album.total">%d albums</string>
    <string name="artist.song.total">%d songs</string>
    <string name="artist.song.total.out_of">%d songs out of %d</string>
    <!-- ArtistsFragment END -->
</resources>
