<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100"
    android:padding="5dp"
    android:gravity="center_vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/image_view_cover"
        android:layout_weight="15"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/cover"
        app:srcCompat="@drawable/ic_music" />

    <LinearLayout
        android:layout_weight="75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="title"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_button_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/previous"
                app:srcCompat="@drawable/btn_skip_to_previous" />

            <ImageButton
                android:id="@+id/image_button_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/play"
                app:srcCompat="@drawable/btn_play" />

            <ImageButton
                android:id="@+id/image_button_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next"
                app:srcCompat="@drawable/btn_skip_to_next" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/image_button_close"
        android:layout_weight="10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        app:srcCompat="@drawable/ic_close" />

</LinearLayout>
