<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout_audio_player"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5"
    android:gravity="center_vertical"
    android:minHeight="65dp"
    android:elevation="10dp"
    android:visibility="gone"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/default_padding"
    android:paddingStart="@dimen/default_padding"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/text_view_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/text_size_artist" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/image_button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous"
            app:srcCompat="@drawable/btn_skip_to_previous" />

        <ImageButton
            android:id="@+id/image_button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play"
            app:srcCompat="@drawable/btn_pause" />

        <ImageButton
            android:id="@+id/image_button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next"
            app:srcCompat="@drawable/btn_skip_to_next" />
    </LinearLayout>
</LinearLayout>